# event-storage

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
event_storage/: __init__.py  base.py  database.py  settings.py
event_storage/crud/: __init__.py  annotation.py  dataset.py  event.py  metadata.py  processing.py  reference.py
event_storage/models/: __init__.py  annotation.py  associations.py  dataset.py  event.py  metadata.py  processing.py  reference.py
scripts/: example_queries.py  init_db.py  populate_sample_data.py
tests/: conftest.py  test_crud_annotation.py  test_crud_dataset.py  test_crud_event.py  test_crud_metadata.py  test_crud_processing.py  test_crud_reference.py  test_models_annotation.py  test_models_dataset.py  test_models_event.py  test_models_metadata.py  test_models_reference.py
